# UvA-PE

./: .gitignore  .gitmodules  CMakeLists.txt
Assignment1/: CMakeLists.txt
Assignment1/Assignment1_1/: matmul.cpp  transpose  transpose.cpp
Assignment1/Assignment1_3_omp/: transpose.cpp
Assignment1/Matrix/: matA
Assignment1/Original/: matmul  matmul.c  transpose
Assignments/: Assignment1.tar.xz  Assignment2.tar.xz  CMakeLists.txt
Assignments/Assignment1/: CMakeLists.txt
Assignments/Assignment1/1/: matmul  test
Assignments/Assignment1/3/: CMakeLists.txt
Assignments/Assignment1/Assignment1_1/: Makefile  matmul.s  transpose.cpp
Assignments/Assignment1/Assignment1_3/: CMakeLists.txt  Makefile  matmul.cu  transpose.cu
Assignments/Assignment1/Assignment1_3_omp/: matmul  matmul.cpp  mmio.c  transpose
Assignments/Assignment1/Matrix/: arc130.mtx
Assignments/Assignment1/Original/: matmul.c
Assignments/Assignment2/: CMakeLists.txt
Assignments/Assignment2/3/: CMakeLists.txt
Assignments/Assignment3/: CMakeLists.txt
Assignments/Assignment3/SPMV-ELLPACK/: CMakeLists.txt
Assignments/Assignment3/matmul-OMP/: Makefile
Assignments/Assignment3/spmv/: Makefile  spmv  spmv.c  spmv_kernel.c
Assignments/Assignment3/spmv_csr_mul/: Makefile  mmio.c  spmv  spmv.c  spmv_kernel.c  test.mtx  test.sha1
Assignments/Assignment3/spmv_csr_seq/: spmv  spmv.c  spmv_kernel.c  spmv_kernel.h
Assignments/Assignment4/: numa.cpp  numa_imp.cpp
Project/: CMakeLists.txt
Project/Examples/NBody-CUDA/: Makefile  nbody
Project/NBody/: BarnzNhutt.cpp  CMakeLists.txt  Constants.h  Makefile
Project/NBody-v2/: CMakeCache.txt  CMakeLists.txt  Makefile  Project  cmake_install.cmake
Project/NBody/Main/: CMakeLists.txt
Project/NBody/Main/Source/: Bhtree.cpp  Bhtree.hpp  Body.cpp  Body.hpp  Color.cpp  Color.hpp  Constants.hpp  Image.cpp  Image.hpp  NBody.cpp  Octant.cpp  Octant.hpp  Universe.cpp  Universe.hpp  Utility.cpp  Utility.hpp  Vector3.cpp  Vector3.hpp  Worker.cpp  Worker.hpp  safeQueue.hpp
(+102 files in other folders)
